...
                                    <constraint firstAttribute="height" constant="60" id="qfR-bx-tP0"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f3h-Br-UHW">
                                <rect key="frame" x="16" y="680" width="361" height="48"/>
                                <color key="backgroundColor" name="ypWhite"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="x6m-Qf-Nv6"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Войти">
                                    <color key="titleColor" name="ypBlack"/>
...
                                                        </userDefinedRuntimeAttribute>
                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QCW-u3-Jjr" userLabel="LikeButton">
                                                    <rect key="frame" x="323" y="4" width="54" height="42"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="PictureLikeButton"/>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="LikeNoActive"/>
                                                    <buttonConfiguration key="configuration" style="plain" image="LikeNoActive"/>
                                                    <connections>
                                                        <action selector="likeButtonClicked" destination="CxV-tx-CeI" eventType="touchUpInside" id="MQ9-Rs-9G4"/>
                                                    </connections>
...
                                <connections>
                                    <action selector="didTapShareButton:" destination="s43-ch-UTS" eventType="touchUpInside" id="N7i-nS-lef"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JoG-Q6-Npr">
                                <rect key="frame" x="16" y="15" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="SingleImageBackButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="48" id="eCN-Pp-oUx"/>
                                    <constraint firstAttribute="height" constant="48" id="qun-9c-6x2"/>
                                </constraints>
                                <color key="tintColor" name="ypWhite"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
