...
        let profileLogOutButton = UIButton.systemButton(with: UIImage(systemName: "ipad.and.arrow.forward")!, target: self, action: #selector(Self.buttonLogOutTouched))
        view.addSubview(profileLogOutButton)
        profileLogOutButton.tintColor = .ypRed
        profileLogOutButton.translatesAutoresizingMaskIntoConstraints = false
        profileLogOutButton.topAnchor.constraint(equalTo: profileImage.centerYAnchor ).isActive = true
        profileLogOutButton.trailingAnchor.constraint(equalTo: view.safeAreaLayoutGuide.trailingAnchor, constant: -20).isActive = true
        profileLogOutButton.accessibilityIdentifier = "ProfileLogOutButton"
        return profileLogOutButton
    }()
    
    // MARK: - Lifecycle
    
    override func viewDidLoad() {
...
